fix(legacy): `Textarea` use balance text-wrap in safari

--- a/projects/legacy/components/textarea/textarea.style.less
+++ b/projects/legacy/components/textarea/textarea.style.less
@@ -41,6 +41,12 @@
     &[data-size='l']._has-counter {
         --tui-textarea-height: @heightCounter;
     }
+
+    .safari-only({
+        .t-pseudo-content, .t-input {
+            text-wrap: balance;
+        }
+    });
 }
 
 .t-outline {
